# CropTrackingSystem

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  SUBMISSION.md  run_all_examples.bat  run_all_examples.sh  validateall.bat
data/input/: input_data.json  long_200_frames.json  many_objects_100.json  occlusion_1frame.json  occlusion_3frames.json  overlapping.json  pixel_coords.json  simple_3_frames.json  summary.json
data/output/input_data/: tracking_output.json
data/output/long_200_frames/: tracking_output.json
data/output/many_objects_100/: tracking_output.json
data/output/occlusion_1frame/: tracking_output.json
data/output/occlusion_3frames/: tracking_output.json
data/output/overlapping/: tracking_output.json
data/output/pixel_coords/: tracking_output.json
data/output/simple_3_frames/: tracking_output.json
include/: tracker.hpp
src/: main.cpp  tracker.cpp
tools/: check_ids.py
